[package]
name = "crates"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "jessie-ast",
    "jessie-compiler",
    "jessie-parser",
    "jessie-type-checker",
    "kala-interpreter",
    "kala-repr",
    "kala-vm",
    "kala-data",
    "utils",
]

[dependencies]
