[package]
name = "kala-interpreter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kala-ast = { version = "0.1.0", path = "../kala-ast" }
kala-context = { version = "0.1.0", path = "../kala-context" }
# kala-lexical = { version = "0.1.0", path = "../kala-lexical" }
# kala-data = { version = "0.1.0", path = "../kala-data" } 