[package]
name = "kala-vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jessie-ast = { version = "0.1.0", path = "../jessie-ast" }
bumpalo = { version = "3.9", features = ["allocator_api"] }
utils = { version = "0.1.0", path = "../utils" }
kala-repr = { version = "0.1.0", path = "../kala-repr" }