[package]
name = "kala-suite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kala-interpreter = { version = "0.1.0", path = "../kala-interpreter" }
kala-repr = { version = "0.1.0", path = "../kala-repr" }
jessie-ast = { version = "0.1.0", path = "../jessie-ast" }
jessie-parser = { version = "0.1.0", path = "../jessie-parser" }
utils = { version = "0.1.0", path = "../utils" }
jessie-scope = { version = "0.1.0", path = "../jessie-scope"}